fix overflow

--- a/static/core/css/custom.css
+++ b/static/core/css/custom.css
@@ -846,7 +846,7 @@ position: absolute;
 #about-page {
   line-height: 1.6em;
   padding-bottom: 2em; 
-  overflow-x: visible; }
+  overflow: hidden; }
 #about-page .carousel-container {
     width: 100%;
     max-height: 85vh;
